--- a/src/views/pages/Canteen/Styles.css
+++ b/src/views/pages/Canteen/Styles.css
@@ -20,6 +20,7 @@
 .items {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
 }
 
 @media only screen and (max-width: 1200px) {
