--- a/src/views/pages/staffManagement/style.css
+++ b/src/views/pages/staffManagement/style.css
@@ -7,3 +7,10 @@
 .css-1s2u09g-control {
   min-height: 45px !important;
 }
+
+@media only screen and (max-width: 600px) {
+  .Step_Header {
+    display: flex;
+    justify-content: center;
+  }
+}
