--- a/src/views/pages/staffManagement/style.css
+++ b/src/views/pages/staffManagement/style.css
@@ -14,3 +14,11 @@
     justify-content: center;
   }
 }
+
+
+.buttons-head{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
