--- a/src/views/pages/studentManagement/style.css
+++ b/src/views/pages/studentManagement/style.css
@@ -7,3 +7,11 @@
 .css-1s2u09g-control {
   min-height: 45px !important;
 }
+
+
+.buttons-head{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
