--- a/src/views/pages/Attendance/Attendance.css
+++ b/src/views/pages/Attendance/Attendance.css
@@ -18,17 +18,10 @@
 }
 
 .tags {
-  margin-bottom: 20px;
 }
 
-/* .custom-modal-style {
-  max-width: 2000px;
-  margin-top: -0.5px;
-} */
-.modal-body {
-  width: 100%;
-  overflow-y: scroll;
-  /* height: 765px; */
+.custom-modal-style {
+  height: fit-content !important;
 }
 
 .start-end {
@@ -63,16 +56,26 @@
   font-weight: 400;
   margin: 5px;
 } */
-
-.Student-Attendance-Icons {
-  text-align: center;
+.icons_list {
   display: flex;
+  width: 100%;
+  height: 45px;
   justify-content: center;
-
-  align-items: center;
 }
 
+.icons_div {
+  display: flex;
+}
 
+.icons_div .tags {
+  padding: 10px;
+}
+
+#attendance_icons {
+  flex: 1;
+  justify-content: center;
+  margin-bottom: 0 !important;
+}
 
 .Student-Attendance-Icons > p {
   font-size: 2rem;
@@ -100,6 +103,43 @@
   }
 }
 
-table{
+table {
+  table-layout: fixed;
   width: 100%;
+}
+
+table thead th {
+  text-align: center;
+  padding: 10px;
+  background-color: #11cdef;
+}
+
+table tbody tr {
+  text-align: center;
+  border-bottom: 0.1px solid rgb(169, 169, 169, 0.2);
+}
+
+table tbody tr td {
+  padding: 10px;
+  border-right: 0.1px solid rgb(169, 169, 169, 0.2);
+  text-size-adjust: inherit;
+}
+
+.model_table_main {
+  width: 99%;
+  overflow: scroll;
+}
+
+.model_table {
+  width: auto;
+  min-width: 100%;
+}
+
+.attendance_main_div {
+  width: 99%;
+  overflow: scroll;
+}
+
+.buttons {
+  display: flex;
 }
