--- a/src/views/pages/staffManagement/style.css
+++ b/src/views/pages/staffManagement/style.css
@@ -15,6 +15,14 @@
   }
 }
 
+.stateInput{
+  width: 100%;
+  height: 60%;
+}
+
+.inputError{
+  color: red;
+}
 
 .buttons-head{
   display: flex;
@@ -42,6 +50,8 @@ small{
     margin: 5px;
   }
 }
+
+
 
 .attendance-icons > span {
   font-size: 1.2rem;
