--- a/src/views/pages/staffManagement/style.css
+++ b/src/views/pages/staffManagement/style.css
@@ -183,3 +183,12 @@ table tbody tr td {
 .buttons {
   display: flex;
 }
+
+#capture_div{
+  margin: 0 !important;
+}
+
+.react-html5-camera-photo  video{
+  width: 100%;
+  height: 50%;
+}
