--- a/src/views/pages/studentManagement/style.css
+++ b/src/views/pages/studentManagement/style.css
@@ -13,7 +13,13 @@
   height: 60%;
 }
 
-
+.datePicker{
+  border: 0.5px solid rgb(207, 201, 201) !important ;
+  border-radius: 2px;
+  /* background-color: rgb(245, 245, 245); */
+  width: 100% !important; 
+  height: 2.9rem !important;
+}
 .buttons-head{
   display: flex;
   justify-content: space-between;
