--- a/src/views/pages/staffManagement/style.css
+++ b/src/views/pages/staffManagement/style.css
@@ -30,6 +30,7 @@
   /* background-color: rgb(245, 245, 245); */
   width: 100% !important; 
   height: 2.9rem !important;
+  z-index: 10000;
 }
 
 .buttons-head{
