--- a/src/views/pages/studentManagement/style.css
+++ b/src/views/pages/studentManagement/style.css
@@ -18,6 +18,7 @@
   border-radius: 2px;
   /* background-color: rgb(245, 245, 245); */
   width: 100% !important; 
+  z-index: 10000;
   height: 2.9rem !important;
 }
 .buttons-head{
