--- a/src/views/pages/staffManagement/style.css
+++ b/src/views/pages/staffManagement/style.css
@@ -30,7 +30,8 @@
   /* background-color: rgb(245, 245, 245); */
   width: 100% !important; 
   height: 2.9rem !important;
-  z-index: 10000;
+  background: white;
+  z-index: 10000 !important;
 }
 
 .buttons-head{
