--- a/src/views/pages/Calender.css
+++ b/src/views/pages/Calender.css
@@ -25,3 +25,12 @@ margin: 0.5rem;
 .fc-toolbar-1tr{
   height: 3rem !important;
 }
+
+.datePicker{
+  border: 0.5px solid rgb(207, 201, 201) !important ;
+  border-radius: 2px;
+  /* background-color: rgb(245, 245, 245); */
+  width: 100% !important; 
+  z-index: 10000;
+  height: 2.9rem !important;
+}
